tests/compile_fail/ktstr_test_memory_mb_zero.rs
use ktstr::ktstr_test;

#[ktstr_test(memory_mb = 0)]
fn bad(_ctx: &ktstr::scenario::Ctx) -> anyhow::Result<ktstr::assert::AssertResult> {
    Ok(ktstr::assert::AssertResult::pass())
}

fn main() {}
